--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
-body { /* the body of the page this is things like the background behind the contioner*/
+body
+{ /* the body of the page this is things like the background behind the contioner*/
 	font: 100%/1.4 Verdana, Arial, Helvetica, sans-serif;
 	background-color: #6a6a6a;
 	margin: 0;
@@ -7,71 +8,121 @@ body { /* the body of the page this is things like the background behind the con
     border-style: solid;
     border: 40px;
 }
-ul { /* the ul of hte page*/
-	padding: 0;
-	margin: 0;
-}
-h1, h2, h3, h4, h5, h6, p { /*The different headers that can be used in the page*/
+
+h1, h2, h3, h4, h5, h6, p 
+{ /*The different headers that can be used in the page this is the general format for the headers can be further customized in those exact headers*/
 	margin-top: 0;
 	padding-right: 10px;
 	padding-left: 10px; 
 	font-weight: bold;
 }
-img { /* this is used to edit the image tags on the page*/
-	border-radius:50%;
+
+h1
+{
+    padding-top: 50px;
+    color: white;
 }
 
-.container { /*This is the where all the infomation on the page lies*/
-	width: 950px;
+h2
+{
+    text-align: center;
+}
+
+h3
+{
+    
+}
+
+h4
+{
+    
+}
+
+h5
+{
+    
+}
+
+h6
+{
+    
+}
+
+p
+{
+    
+}
+
+img
+{ /* this is used to edit the image tags on the page*/
+	border-radius:50%;
+    width: 100%
+}
+
+.container
+{ /*This is the where all the infomation on the page lies*/
+	width: 90%;
 	background-color: #FFFFFF;
 	margin: 0 auto; 
 	text-align: left;
     border: 4px solid;
 }
-header { /*The upper most part of the page*/
+
+header
+{ /*The upper most part of the page*/
 
 	background-color: #909090;
 	height: 100px;
+    width: 100%;
 }
 
-.sidebar1 { /*The sidebar of the page this is used to put infomation*/
+.sidebar1
+{ /*The sidebar of the page this is used to put infomation*/
 	float: left;
-	width: 180px;
-    height:1000px;
+	width: 10%;
+    height:100%;
 	background-color:#909090;
 	padding-bottom: 3px;
 	text-align: left;
     border-right:2px solid;
 }
-.content { /*Where the main writing of the page is held*/
+
+.content
+{ /*Where the main writing of the page is held*/
 	padding: 10px 0;
 	width: 760px;
 	float: right;
+    width: 80%;
 }
 
-.content ul, .content ol {
+.content ul, .content ol
+{
 	padding: 0 15px 15px 40px; 
 }
 
-nav ul{
+ul
+{ /* the ul of the page*/
+	padding: 0;
+	margin: 0;
+    margin-right: 0px;
+	margin-left: 0px;
+}
+
+nav ul
+{
 	list-style: none; /* this removes the list marker */
 	border-top: 1px solid #6a6a6a; /* this creates the top border for the links - all others are placed using a bottom border on the LI */
 	margin-bottom: 15px; /* this creates the space between the navigation on the content below */
 	text-align: left;
-	background-color: #909090;
+	
+    width:100%;
 }
-li { /*used for the lists*/
-font-family: "Times New Roman", Times, serif;
-font-size: 12pt
-}
- ul{
-	margin-right: 0px;
-	margin-left: 0px;
-}
-nav ul a, nav a:visited { /* grouping these selectors makes sure that your links retain their button look even after being visited */
+
+nav ul a, nav a:visited
+{ /* grouping these selectors makes sure that your links retain their button look even after being visited */
 	padding: 5px 10px 5px 10px;
 	display: block; /* this gives the link block properties causing it to fill the whole LI containing it. This causes the entire area to react to a mouse click. */
-	width: 160px;
+	
 	background-color: #909090;
 	text-decoration: none;
 	color: #FFFFFF;
@@ -81,12 +132,22 @@ nav ul a, nav a:visited { /* grouping these selectors makes sure that your links
 	text-align: center;
 	border-left-color: #000000;
 }
-nav ul  a:hover, nav a:active, nav a:focus { /* this changes the background and text color for both mouse and keyboard navigators */
+
+nav ul  a:hover, nav a:active, nav a:focus
+{ /* this changes the background and text color for both mouse and keyboard navigators */
 	color: #FFF;
 	border-bottom: 4px solid #000000;
+    width:100%;
 }
 
-footer {
+li
+{ /*used for the lists*/
+    font-family: "Times New Roman", Times, serif;
+    font-size: 12pt
+}
+
+footer
+{
 	height: 80px;
 	padding: 0px 0;
 	background-color: #909090;
@@ -94,48 +155,57 @@ footer {
 	clear: both; /* this clear property forces the .container to understand where the columns end and contain them */
 }
 
-header, section, footer, article, figure {
+header, section, footer, article, figure
+{
 	display: block;
 }
-nav p {
+
+nav p
+{
 	padding-right: 5px;
-	background-color: #909090;
 	overflow-x: visible;
 	overflow-y: visible;
 	visibility: visible;
 	max-height: 5px;
 }
-nav {
+
+nav
+{
 	text-align: right;
 	padding-right: 5px;
 	padding-top: 2px;
 	padding-bottom: 2px;
-	background-color: #909090;
-	border-bottom-style: ;
-	border-bottom-color: #909090;
 	font-weight: bold;
+    width: 100%;
 }
 
-nav p a:hover  , nav p a:active, nav p a:focus{color: #FFF;border-bottom:#6a6a6a
+nav p a:hover  , nav p a:active, nav p a:focus
+{
+    color: #FFF;
+    border-bottom:#6a6a6a
 }
-a { /*links of the page*/
+
+a 
+{ /*links of the page*/
     border-left 0px
 	text-decoration: none;
 }
 
-
-.pageWrapper { /*part of the flex box*/
+.pageWrapper
+{ /*part of the flex box*/
   margin: 15px;
 }
 
-.row {  /*part of the flex box*/
+.row
+{  /*part of the flex box*/
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
 }
 
-.column {  /*part of the flex box*/
+.column
+{  /*part of the flex box*/
   display: flex;
   flex-direction: column;
   flex-basis: 100%;
